[gd_scene load_steps=9 format=3 uid="uid://divw01xyxbdcd"]

[ext_resource type="Script" path="res://scenes/door/scripts/door.gd" id="1_3bkut"]
[ext_resource type="SpriteFrames" uid="uid://bfdimsbwvol08" path="res://scenes/door/res/door_sprite_frames.tres" id="1_cwl13"]
[ext_resource type="AudioStream" uid="uid://bxopwgh8jqh28" path="res://assets/sound/door.wav" id="3_5h2lw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ibyt8"]
size = Vector2(16, 64)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_dhmrx"]
polygon = PackedVector2Array(-8, -32, -8, 32, 8, 32, 8, -32)

[sub_resource type="Animation" id="Animation_qf2xh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightOccluder2D:occluder:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [PackedVector2Array(-8, -32, -8, 32, 8, 32, 8, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 64)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_xdmc1"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LightOccluder2D:occluder:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(-8, -32, -8, 32, 8, 32, 8, -32), PackedVector2Array(-8, -32, -8, -32, 8, -32, 8, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:shape:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(16, 64), Vector2(16, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o03x5"]
_data = {
"RESET": SubResource("Animation_qf2xh"),
"default": SubResource("Animation_xdmc1")
}

[node name="Door" type="AnimatableBody2D"]
script = ExtResource("1_3bkut")

[node name="DoorSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_cwl13")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ibyt8")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_dhmrx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o03x5")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5h2lw")
bus = &"Effect"

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
